Se agregan nuevos cambios

--- a/QualIt.TechnicalTest.Web/App/Template/books.html
+++ b/QualIt.TechnicalTest.Web/App/Template/books.html
@@ -36,7 +36,7 @@
                         <input class="form-control" type="text" placeholder="description" ng-model="book.description" required />
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" placeholder="image" ng-model="book.image" required />
+                        <input class="form-control" type="text" placeholder="url image" ng-model="book.image" required />
                     </div>
                     <div class="form-group">
                         <input class="form-control" type="text" placeholder="author" ng-model="book.author" required />
